feat: email confirmation
