# src/routes/userRouter.js
@@ -6,6 +6,7 @@ const router = express.Router();
 const jsonParser = bodyParser.json();
 
 router.post("/signup", jsonParser, userController.userSignUp);
+router.post("/confirmation", jsonParser, userController.userConfirm);
 router.post("/login", jsonParser, userController.login);
 
 export default router;
